--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style-register.css">
     <script>
         function validate() {
             var email = document.querySelector('input[name="email"]').value;
