--- a/job-provider.html
+++ b/job-provider.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h3></h3>
+    <h3>CREATE YOUR PROFILE</h3>
+    <form action="" method="post">
+        <input type="number" name="phn_no" placeholder="enter your phone number" required>
+        <input type="text" name="company_name" place holder="enter your company name" required>
+        <input type=""
+
+    </form>
 </body>
 </html>
