--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
       <input type="password" name="pword"  placeholder="enter password" required><br>
       <input type="password" name="cpword" placeholder="confirm your password" required><br>
       <select name="role" required>
-      <option value="job provider">select an aoption</option>
+      <option value="Role">select an option</option>
         <option value="job provider">job provider</option>
         <option value="job seeker">job seeker</option>
       </select>
