--- a/job-provider.html
+++ b/job-provider.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style-jobprovider.css">
     <script>
         function validate() {
     var phn_no = document.getElementsByName('phn_no')[0].value;
