--- a/job-provider.html
+++ b/job-provider.html
@@ -29,7 +29,7 @@
 </head>
 <body>
    
-    <form action="" onsubmit="return validate()" method="post">
+    <form action="job-provider.php" onsubmit="return validate()" method="post">
         <h3>CREATE YOUR PROFILE</h3>
         <label>Enter your company details:</label><br>
         <input type="text" name="company_name" placeholder="enter your company name" required><br>
