--- a/job-posting.html
+++ b/job-posting.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style-jobposting.css">
 </head>
 <body>
     <form method="post" action="">
         <h1>POST YOUR JOB HERE!!</h1>
         <input type="text" name="job_title" placeholder="enter your job title" required><br>
-        <input type="">
+        <input type="text" name="skills_req" placeholder="enter the skills required for this job" reqiured><br>
+        <input type="text" name="schedule_req" placeholder="enter the schedule for this job" required><br>
+        <input type="text" name="location" placeholder="enter location" required><br>
+        <input type="text" name="description" placeholder="describe about job" required><br>
+        <input type="date" name="post_date" placeholder="enter the posted date" required><br>
+        <input type="number" name="salary" placeholder="enter salary" required><br>
+        <button type="submit" name="submit">POST JOB</button>
     </form>
 </body>
 </html>
