--- a/job-provider.html
+++ b/job-provider.html
@@ -35,7 +35,7 @@
         <input type="text" name="company_name" placeholder="enter your company name" required><br>
         <input type="number" name="phn_no" placeholder="enter your phone number" required><br>
         <input type="text" name="industry" placeholder="In which field your company is working" required><br>
-        <input type="text" name="address" placeholder="enter your company address"  required><br>
+       <textarea name="address"rows="3" cols="50" placeholder="enter your company address"  required></textarea><br>
         <button type="submit" name="update">Update Profile</button>
     </form>
 </body>
