--- a/job-posting.html
+++ b/job-posting.html
@@ -10,10 +10,10 @@
     <form method="post" action="">
         <h1>POST YOUR JOB HERE!!</h1>
         <input type="text" name="job_title" placeholder="enter your job title" required><br>
-        <input type="text" name="skills_req" placeholder="enter the skills required for this job" reqiured><br>
-        <input type="text" name="schedule_req" placeholder="enter the schedule for this job" required><br>
-        <input type="text" name="location" placeholder="enter location" required><br>
-        <input type="text" name="description" placeholder="describe about job" required><br>
+        <textarea name="skills_req"rows=5 cols="50" placeholder="enter the skills required for this job" reqiured></textarea><br>
+        <textarea name="schedule_req" rows=3 cols=50 placeholder="enter the schedule for this job" required></textarea><br>
+        <textarea name="location"rows=5 cols="50" placeholder="enter location" required></textarea><br>
+        <textarea name="description" rows=5 cols=50 placeholder="describe about job" required></textarea><br>
         <input type="date" name="post_date" placeholder="enter the posted date" required><br>
         <input type="number" name="salary" placeholder="enter salary" required><br>
         <button type="submit" name="submit">POST JOB</button>
