--- a/job-posting.html
+++ b/job-posting.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style-jobposting.css">
 </head>
 <body>
-    <form method="post" action="">
+    <form method="post" action="job-posting.php">
         <h1>POST YOUR JOB HERE!!</h1>
         <input type="text" name="job_title" placeholder="enter your job title" required><br>
         <textarea name="skills_req"rows=5 cols="50" placeholder="enter the skills required for this job" reqiured></textarea><br>
