--- a/job-seeker.html
+++ b/job-seeker.html
@@ -5,9 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style-jobseeker.css">
+    <script>
+
+   function validatePhoneNumber(phoneNumber) {
+    const phoneRegex = /^\d{10}$/;
+    return phoneRegex.test(phoneNumber);
+}
+
+        function calculateAge(dob) {
+    const today = new Date();
+    const birthDate = new Date(dob);
+    const age = today.getFullYear() - birthDate.getFullYear();
+    const month = today.getMonth() - birthDate.getMonth();
+    if (month < 0 || (month === 0 && today.getDate() < birthDate.getDate())) {
+        age--;
+    }
+    return age;
+}
+
+function validateForm() {
+    const phoneNumber = document.querySelector('input[name="seeker_phno"]').value;
+    const dob = document.querySelector('input[name="dob"]').value;
+
+    if (!validatePhoneNumber(phoneNumber)) {
+        alert("Invalid phone number. Please enter a 10-digit number.");
+        return false;
+    }
+
+    const age = calculateAge(dob);
+    if (age < 18) {
+        alert("You are a minor and cannot create a profile.");
+        return false;
+    }
+
+    return true;
+}
+
+
+    </script>
 </head>
 <body>
-    <form method="post" action="">
+    <form method="post" action="job-seeker.php" id="jobSeekerForm" onsubmit="return validatePhoneNumber()" >
         <h1>CREATE YOUR PROFILE</h1>
         <label>Enter your date of birth:</label>
         <input type="date" name="dob" required><br><br>
