--- a/dashboardheader.html
+++ b/dashboardheader.html
@@ -12,7 +12,7 @@
           <a href="home.php" target="_blank">  <img src="./logo.svg" ></a>
         </div>
         <div class=profile>
-          <a href="job-provider.html" target="_blank">  <img src="./contact_9921248.png"></a>
+          <a href="profileupdate-provider.php" target="_blank">  <img src="./contact_9921248.png"></a>
         </div>
     </div>
 </body>
