--- a/dashboard-seeker.html
+++ b/dashboard-seeker.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <frameset rows="12%,*" border="none">
-  <frame src="dashboardheader.html" >
+  <frame src="dashboardheader-seeker.html" >
     <frameset cols="15%,*">
-      <frame src="sidebar.html" >
+      <frame src="sidebar-seeker.html" >
       <frame src="main.html" name="frame2">
 </frameset>
 </frameset>
