--- a/dashboardheader-seeker.html
+++ b/dashboardheader-seeker.html
@@ -14,7 +14,7 @@
         <div> <input type="text" placeholder="Search..">
 </div>
         <div class=profile>
-          <a href="profileupdate-provider.php" target="_blank">  <img src="./contact_9921248.png"></a>
+          <a href="profileupdate-seeker.php" target="_blank">  <img src="./contact_9921248.png"></a>
         </div>
     </div>
 </body>
