--- a/sidebar-seeker.html
+++ b/sidebar-seeker.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="job-application.html" target=frame2>apply JOB</a><br>
-        <a href=job-posting.html>VIEW POSTED JOB</a><br>
-        <a href=job-posting.html>REQUESTS</a><br>
+        <a href="display-jobs.php" target=frame2>VIEW JOB</a><br>
+        <a href=job-posting.html>VIEW STATUS</a><br>
         <a href=job-posting.html>LOG OUT</a><br>
       </div>
 </body>
