--- a/sidebar-seeker.html
+++ b/sidebar-seeker.html
@@ -9,8 +9,8 @@
 <body>
     <div class="sidebar">
         <a href="display-jobs.php" target=frame2>VIEW JOB</a><br>
-        <a href=job-posting.html>VIEW STATUS</a><br>
-        <a href=job-posting.html>LOG OUT</a><br>
+        <a href="apply-status.php" target="frame2">VIEW STATUS</a><br>
+        <a href=logout.php>LOG OUT</a><br>
       </div>
 </body>
 </html>
