--- a/sidebar-seeker.html
+++ b/sidebar-seeker.html
@@ -10,7 +10,7 @@
     <div class="sidebar">
         <a href="display-jobs.php" target=frame2>VIEW JOB</a><br>
         <a href="apply-status.php" target="frame2">VIEW STATUS</a><br>
-        <a href=logout.php>LOG OUT</a><br>
+        <a href=logout.php  target="_blank">LOG OUT</a><br>
       </div>
 </body>
 </html>
