--- a/sidebar.html
+++ b/sidebar.html
@@ -9,7 +9,7 @@
 <body>
     <div class="sidebar">
         <a href="job-posting.html" target=frame2>POST JOB</a><br>
-        <a href="display-jobs.php" target=frame2>VIEW POSTED JOB</a><br>
+        <a href="display-jobpost.php" target=frame2>VIEW POSTED JOB</a><br>
         <a href=job-posting.html>REQUESTS</a><br>
         <a href=job-posting.html>LOG OUT</a><br>
       </div>
