--- a/sidebar.html
+++ b/sidebar.html
@@ -11,7 +11,7 @@
         <a href="job-posting.html" target=frame2>POST JOB</a><br>
         <a href="display-jobpost.php" target=frame2>VIEW POSTED JOB</a><br>
         <a href=job-posting.html>REQUESTS</a><br>
-        <a href="logout.php" target="frame2">LOG OUT</a><br>
+        <a href="logout.php" target="_blank">LOG OUT</a><br>
       </div>
 </body>
 </html>
