--- a/job-seeker.html
+++ b/job-seeker.html
@@ -47,6 +47,7 @@ function validateForm() {
 <body>
     <form method="post" action="job-seeker.php" id="jobSeekerForm" onsubmit="return validateForm()" >
         <h1>CREATE YOUR PROFILE</h1>
+        <label>Enter your full name: </label>
         <label>Enter your date of birth:</label>
         <input type="date" name="dob" required><br><br>
         <label>Select your gender:</label><br>
