--- a/job-posting.html
+++ b/job-posting.html
@@ -9,12 +9,20 @@
 <body>
     <form method="post" action="job-posting.php">
         <h1>POST YOUR JOB HERE!!</h1>
-        <input type="text" name="job_title" placeholder="enter your job title" required><br>
-        <textarea name="schedule_req" rows=3 cols=50 placeholder="enter the schedule for this job" required></textarea><br>
-        <textarea name="location"rows=5 cols="50" placeholder="enter location" required></textarea><br>
-        <textarea name="description" rows=5 cols=50 placeholder="describe about job" required></textarea><br>
-        <input type="date" name="post_date" placeholder="enter the posted date" required><br>
-        <input type="number" name="salary" placeholder="enter salary" required><br>
+        <label>Enter your job title</label><br>
+        <input type="text" name="job_title"  required><br>
+        <label>enter the schedule for this job:</label><br>
+        <textarea name="schedule_req" rows=3 cols=50  required></textarea><br>
+        <label>Enter the location: </label><br>
+        <textarea name="location"rows=5 cols="50"  required></textarea><br>
+        <label>Describe about your job: </label>
+        <textarea name="description" rows=5 cols=50  required></textarea><br>
+         <label> enter the contact number for any enquiry: </label><br>
+         <input type="number" name="contact_no" required><br>
+        <label>enter the posted date: </label><br>
+        <input type="date" name="post_date" required><br>
+        <label>enter the salary for this job: </label><br>
+        <input type="number" name="salary"  required><br>
         <button type="submit" name="submit">POST JOB</button>
     </form>
 </body>
