--- a/job-seeker.html
+++ b/job-seeker.html
@@ -48,6 +48,7 @@ function validateForm() {
     <form method="post" action="job-seeker.php" id="jobSeekerForm" onsubmit="return validateForm()" >
         <h1>CREATE YOUR PROFILE</h1>
         <label>Enter your full name: </label>
+        <input type="text" name="name" placeholder="Enter here...." required><br><br>
         <label>Enter your date of birth:</label>
         <input type="date" name="dob" required><br><br>
         <label>Select your gender:</label><br>
