--- a/sidebar.html
+++ b/sidebar.html
@@ -10,8 +10,8 @@
     <div class="sidebar">
         <a href="job-posting.html" target=frame2>POST JOB</a><br>
         <a href="display-jobpost.php" target=frame2>VIEW POSTED JOB</a><br>
-        <a href=job-posting.html>REQUESTS</a><br>
-        <a href="logout.php" target="_blank">LOG OUT</a><br>
+        <a href="display-requests.php" target=frame2>REQUESTS</a><br>
+        <a href="logout.php" target="_top">LOG OUT</a><br>
       </div>
 </body>
 </html>
