--- a/job-provider.html
+++ b/job-provider.html
@@ -31,12 +31,11 @@
    
     <form action="job-provider.php" onsubmit="return validate()" method="post">
         <h3>CREATE YOUR PROFILE</h3>
-        <label>Enter your company details:</label><br>
-        <input type="text" name="company_name" placeholder="enter your company name" required><br>
-        <input type="number" name="phn_no" placeholder="enter your phone number" required><br>
-        <input type="text" name="industry" placeholder="In which field your company is working" required><br>
-       <textarea name="address"rows="3" cols="50" placeholder="enter your company address"  required></textarea><br>
-        <button type="submit" name="update">Update Profile</button>
+        <label>Enter your Name: </label><br>
+        <input type="text" name="name" required><br>
+        <label>Enter your phone number:</label><br>
+        <input type="number" name="phn_no" required><br>
+        <button type="submit" name="update">SUBMIT</button>
     </form>
 </body>
 </html>
