--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -9,7 +9,7 @@
   <frame src="admin-header.html" frameborder="0" >
     <frameset cols="15%,*">
       <frame src="admin-sidebar.html"frameborder="0" >
-     <!-- <frame src="admin-main.html" name="frame2" frameborder="0">-->
+     <frame src="admin-main.php" name="frame2" frameborder="0">
 </frameset>
 </frameset>
 </html>
