--- a/admin-sidebar.html
+++ b/admin-sidebar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="admin-main.html" target=frame2>Overview</a><br>
+        <a href="admin-main.php" target=frame2>Overview</a><br>
         <a href="apply-status.php" target="frame2">Job Applications</a><br>
         <a href="apply-status.php" target="frame2">Job posts</a><br>
         <a href="apply-status.php" target="frame2">User management</a><br>
