--- a/admin-header.html
+++ b/admin-header.html
@@ -13,8 +13,8 @@
         </div>
         <div class=profile>
           <a href="admin-main.php" target="frame2">Dashboard</a>
-          <a href="admin-main.php" target="frame2">Users</a>
-          <a href="admin-main.php" target="frame2">Jobs</a>
+          <a href="user-management.php" target="frame2">Users</a>
+          <a href="display-job-post-request.php" target="frame2">Jobs</a>
           <form action="logout.php" method="post">
             <button type="submit" name="logout">LOGOUT</button>
           </form>
