--- a/admin-sidebar.html
+++ b/admin-sidebar.html
@@ -9,10 +9,9 @@
 <body>
     <div class="sidebar">
         <a href="admin-main.php" target=frame2>Overview</a><br>
-        <a href="apply-status.php" target="frame2">Job Applications</a><br>
-        <a href="apply-status.php" target="frame2">Job posts</a><br>
-        <a href="apply-status.php" target="frame2">User management</a><br>
-        <a href=logout.php  target="_top">Profile</a><br>
+        <a href="display-job-application.php" target="frame2">Job Applications</a><br>
+        <a href="display-job-post-request.php" target="frame2">Job posts</a><br>
+        <a href="user-management.php" target="frame2">User management</a><br>
       </div>
 </body>
 </html>
