--- a/admin-header.html
+++ b/admin-header.html
@@ -15,9 +15,7 @@
           <a href="admin-main.php" target="frame2">Dashboard</a>
           <a href="user-management.php" target="frame2">Users</a>
           <a href="display-job-post-request.php" target="frame2">Jobs</a>
-          <form action="logout.php" method="post">
-            <button type="submit" name="logout">LOGOUT</button>
-          </form>
+          <a  class="button" href=logout.php  target="_top">LOG OUT</a><br>
         </div>
     </div>
 </body>
