--- a/dashboardheader-seeker.html
+++ b/dashboardheader-seeker.html
@@ -10,9 +10,12 @@
     <div class=header>
         <div class=logo>
           <a href="home.php" target="_blank">  <img src="./logo.svg" ></a>
-        </div class="search">
-        <div> <input type="text" placeholder="Search..">
+        </div> 
+        <div class="search"> <input type="text" placeholder="Search..">
 </div>
+       <div class="bell-icon">
+        <a href="fetch-notifications.php"target="frame" ><img src="./bell-icon.png"></a>
+       </div>
         <div class=profile>
           <a href="profile-seeker.php" target="frame2">  <img src="./contact_9921248.png"></a>
         </div>
