--- a/sidebar-seeker.html
+++ b/sidebar-seeker.html
@@ -10,6 +10,7 @@
     <div class="sidebar">
         <a href="display-jobs.php" target=frame2>VIEW JOB</a><br>
         <a href="apply-status.php" target="frame2">VIEW STATUS</a><br>
+        <a href="fetch-notifications.php" target="frame2">YOUR NOTIFICATIONS</a>
         <a href=logout.php  target="_top">LOG OUT</a><br>
       </div>
 </body>
