--- a/dashboard-seeker.html
+++ b/dashboard-seeker.html
@@ -9,7 +9,7 @@
   <frame src="dashboardheader-seeker.html" >
     <frameset cols="15%,*">
       <frame src="sidebar-seeker.html" >
-      <frame src="main.html" name="frame2">
+      <frame src="seeker-main.html" name="frame2">
 </frameset>
 </frameset>
 </html>
