--- a/sidebar-seeker.html
+++ b/sidebar-seeker.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="sidebar">
+        <a href="seeker-main.html" target=frame2>DASHBOARD</a><br>
         <a href="display-jobs.php" target=frame2>VIEW JOB</a><br>
         <a href="apply-status.php" target="frame2">VIEW STATUS</a><br>
         <a href="fetch-notifications.php" target="frame2">YOUR NOTIFICATIONS</a>
