--- a/seeker-main.html
+++ b/seeker-main.html
@@ -132,63 +132,64 @@
                 <img src="mall_15407069.png" alt="Retail" class="card-img">
                 <h3>Retail</h3>
                 <p>Explore job opportunities in the retail sector.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/retail.php" class="card-button">Explore</a>
             </div>
             <!-- Hospitality Category Card -->
             <div class="card">
                 <img src="luggage-cart_16874831.png" alt="Hospitality" class="card-img">
                 <h3>Hospitality</h3>
                 <p>Find jobs in hotels, restaurants, and tourism.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/hospitality.php" class="card-button">Explore</a>
             </div>
             <!-- Education Category Card -->
             <div class="card">
                 <img src="education.jpg" alt="Education" class="card-img">
                 <h3>Education</h3>
                 <p>Teaching and educational support jobs.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/education.php" class="card-button">Explore</a>
             </div>
             <!-- Healthcare Category Card -->
             <div class="card">
                 <img src="healthcare_8506071.png" alt="Healthcare" class="card-img">
                 <h3>Healthcare</h3>
                 <p>Opportunities in the medical and health sector.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/healthcare.php" class="card-button">Explore</a>
             </div>
             <!-- Finance Category Card -->
             <div class="card">
                 <img src="finance.jpg" alt="Finance" class="card-img">
                 <h3>Finance</h3>
                 <p>Explore jobs in accounting, banking, and finance.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/finance.php" class="card-button">Explore</a>
             </div>
             <!-- Customer Service Category Card -->
             <div class="card">
                 <img src="customer_service.jpg" alt="Customer Service" class="card-img">
                 <h3>Customer Service</h3>
                 <p>Find jobs in customer support and services.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/customer-service.php" class="card-button">Explore</a>
             </div>
             <!-- Flexible Hours Category Card -->
             <div class="card">
                 <img src="flexible_hours.jpg" alt="Flexible Hours" class="card-img">
                 <h3>Flexible Hours</h3>
                 <p>Explore flexible job opportunities.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/flexible-hours.php" class="card-button">Explore</a>
             </div>
             <!-- Weekend Jobs Category Card -->
             <div class="card">
                 <img src="weekend_jobs.jpg" alt="Weekend Jobs" class="card-img">
                 <h3>Weekend Jobs</h3>
                 <p>Find jobs that can be worked on weekends.</p>
-                <a href="#" class="card-button">Explore</a>
+                <a href="searching/weekend-jobs.php" class="card-button">Explore</a>
             </div>
         </div>
 
         <!-- Search Filter Section -->
         <div class="search-filters">
             <h3>Filter Jobs:</h3>
-            <select class="filter-select">
+            <form action="search.php" method="post">
+            <select class="filter-select" name="searching">
                 <option value="flexible-hours">Flexible Hours</option>
                 <option value="weekend-jobs">Weekend Jobs</option>
                 <option value="retail">Retail</option>
@@ -199,7 +200,8 @@
                 <option value="customer-service">Customer Service</option>
                 <!-- Add more filter options if needed -->
             </select>
-            <button class="filter-button">Search</button>
+            <button class="filter-button" type="submit" name="search">Search</button>
+        </form>
         </div>
     </main>
 </body>
