--- a/sidebar-seeker.html
+++ b/sidebar-seeker.html
@@ -11,7 +11,7 @@
         <a href="seeker-main.html" target=frame2>DASHBOARD</a><br>
         <a href="display-jobs.php" target=frame2>VIEW JOB</a><br>
         <a href="apply-status.php" target="frame2">VIEW STATUS</a><br>
-        <a href="fetch-notifications.php" target="frame2">YOUR NOTIFICATIONS</a>
+        <a href="fetch-notifications.php" target="frame2">YOUR NOTIFICATIONS</a><br>
         <a href=logout.php  target="_top">LOG OUT</a><br>
       </div>
 </body>
