--- a/dashboardheader-seeker.html
+++ b/dashboardheader-seeker.html
@@ -57,7 +57,7 @@
         </div>
         <div class="profile">
             <a href="profile-seeker.php" target="frame2">
-                <img src="./image.png" target="frame2" alt="Profile">
+                <img src="./image.png"  alt="Profile">
             </a>
         </div>
     </div>
