--- a/sidebar.html
+++ b/sidebar.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="sidebar">
+        <a href="provider-main.php" target=frame2>DASHBOARD</a><br>
         <a href="job-posting.html" target=frame2>POST JOB</a><br>
         <a href="display-jobpost.php" target=frame2>VIEW POSTED JOB</a><br>
         <a href="display-requests.php" target=frame2>REQUESTS</a><br>
