--- a/admin-sidebar.html
+++ b/admin-sidebar.html
@@ -12,6 +12,7 @@
         <a href="display-job-application.php" target="frame2">Job Applications</a><br>
         <a href="display-job-post-request.php" target="frame2">Job posts</a><br>
         <a href="user-management.php" target="frame2">User management</a><br>
+        <a href="final-report.php" target="frame2">Generate Final Report</a><br>
       </div>
 </body>
 </html>
