--- a/job-posting.html
+++ b/job-posting.html
@@ -35,6 +35,8 @@
          <input type="number" name="contact_no" required><br>
         <label>enter the posted date: </label><br>
         <input type="date" name="post_date" required><br>
+        <label>To which date the post is valid: </label><br>
+        <input type="date" name="exp_date" required><br>
         <label>enter the salary for this job: </label><br>
         <input type="number" name="salary"  required><br>
         <button type="submit" name="submit">POST JOB</button>
