--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <form action="register.php" onsubmit="return validate()" method="post">
-      <h1><img src="./logo.svg"></h1>
+      <h1><img src="./logo2.svg"></h1>
       <input type="text"  name="name" placeholder="enter your name" required><br>
       <input type="email" name="email" placeholder="enter your email" required><br>
       <input type="password" name="pword"  placeholder="enter password" required><br>
