--- a/job-seeker.html
+++ b/job-seeker.html
@@ -63,7 +63,7 @@ function validateForm() {
             <option value="High School">High school</option>
             <option value="Diploma">Diploma</option>
             <option value="Bachelor's Degree">Bachelor's Degree</option>
-            <option value="Master's Degree">Master's Degree</option>
+            <option value="master's Degree">master's Degree</option>
             <option value="PhD">PhD</option>
             <option value="Other">Other</option>
         </select><br><br>
