--- a/seeker-main.html
+++ b/seeker-main.html
@@ -187,19 +187,7 @@
 
         <!-- Search Filter Section -->
         <div class="search-filters">
-            <h3>Filter Jobs:</h3>
-            <form action="search.php" method="post">
-            <select class="filter-select" name="searching">
-                <option value="flexible-hours">Flexible Hours</option>
-                <option value="weekend-jobs">Weekend Jobs</option>
-                <option value="retail">Retail</option>
-                <option value="hospitality">Hospitality</option>
-                <option value="education">Education</option>
-                <option value="healthcare">Healthcare</option>
-                <option value="finance">Finance</option>
-                <option value="customer-service">Customer Service</option>
-                <!-- Add more filter options if needed -->
-            </select>
+            <form action="search_bar.php" method="post" target="frame2">           
             <button class="filter-button" type="submit" name="search">Search</button>
         </form>
         </div>
