--- a/sidebar.html
+++ b/sidebar.html
@@ -11,6 +11,7 @@
         <a href="provider-main.php" target=frame2>DASHBOARD</a><br>
         <a href="job-posting.html" target=frame2>POST JOB</a><br>
         <a href="display-jobpost.php" target=frame2>VIEW POSTED JOB</a><br>
+        <a href="view_totalapplicants.php" target=frame2>TOTAL APPLICANTS</a><br>
         <a href="display-requests.php" target=frame2>REQUESTS</a><br>
         <a href="logout.php" target="_top">LOG OUT</a><br>
       </div>
